grammar.js
    source_file: ($) => seq(optional($.shebang), repeat($._statement)),

    _statement: ($) =>
      choice(
        $.expression_statement,
        $._declaration_statement,
        $.conc_statement, // Added[cite: 1]
      ),

    expression_statement: ($) => choice(seq($._expression, ";"), prec(1, $._expression_ending_with_block)),

    _tokens: ($) => choice($.token_tree, $.token_repetition, $.metavariable, $._non_special_token),

    token_tree: ($) => choice(seq("(", repeat($._tokens), ")"), seq("[", repeat($._tokens), "]"), seq("{", repeat($._tokens), "}")),

    const_item: ($) => seq(optional($.visibility_modifier), "const", field("name", $.identifier), ":", field("type", $._type), optional(seq("=", field("value", $._expression))), ";"),

    function_item: ($) =>
      seq(
        optional($.visibility_modifier),
        optional($.function_modifiers),
        "fn",
        field("name", choice($.identifier, $.metavariable)),
        field("type_parameters", optional($.type_parameters)),
        field("parameters", $.parameters),
        optional(seq("->", field("return_type", $._type))),
        optional($.where_clause),
        field("body", $.block),
      ),

    let_declaration: ($) =>
      seq(
        "let",
        optional($.mutable_specifier),
        field("pattern", $._pattern),
        optional(seq(":", field("type", $._type))),
        optional(seq("=", field("value", $._expression))),
        optional(seq("else", field("alternative", $.block))),
        ";",
      ),

    parameters: ($) => seq("(", sepBy(",", seq(optional($.attribute_item), choice($.parameter, $.self_parameter, $.variadic_parameter, "_", $._type))), optional(","), ")"),

    parameter: ($) => seq(optional($.mutable_specifier), field("pattern", choice($._pattern, $.self)), ":", field("type", $._type)),

    _type: ($) =>
      choice(
        $.abstract_type,
        $.reference_type,
        $.metavariable,
        $.pointer_type,
        $.generic_type,
        $.scoped_type_identifier,
        $.tuple_type,
        $.unit_type,
        $.array_type,
        $.function_type,
        $._type_identifier,
        $.macro_invocation,
        $.never_type,
        $.dynamic_type,
        $.bounded_type,
        $.removed_trait_bound,
        alias(choice(...primitiveTypes), $.primitive_type),
      ),

    generic_type: ($) => prec(1, seq(field("type", choice($._type_identifier, $._reserved_identifier, $.scoped_type_identifier)), field("type_arguments", $.type_arguments))),

    type_arguments: ($) => seq(token(prec(1, "<")), sepBy1(",", seq(choice($._type, $.type_binding, $.lifetime, $._literal, $.block), optional($.trait_bounds))), optional(","), ">"),

    mutable_specifier: (_) => "mut",

    // Section - Expressions

    _expression_except_range: ($) =>
      choice(
        $.unary_expression,
        $.reference_expression,
        $.try_expression,
        $.binary_expression,
        $.assignment_expression,
        $.compound_assignment_expr,
        $.type_cast_expression,
        $.call_expression,
        $.return_expression,
        $.yield_expression,
        $._literal,
        prec.left($.identifier),
        alias(choice(...primitiveTypes), $.identifier),
        prec.left($._reserved_identifier),
        $.self,
        $.scoped_identifier,
        $.generic_function,
        $.await_expression,
        $.field_expression,
        $.array_expression,
        $.tuple_expression,
        prec(1, $.macro_invocation),
        $.unit_expression,
        $.break_expression,
        $.continue_expression,
        $.index_expression,
        $.metavariable,
        $.closure_expression,
        $.parenthesized_expression,
        $.struct_expression,
        $._expression_ending_with_block,
      ),

    _expression: ($) =>
      choice(
        $._expression_except_range,
        $.range_expression,
        $.pipe_expression, // Added[cite: 1]
      ),

    _expression_ending_with_block: ($) =>
      choice($.unsafe_block, $.async_block, $.gen_block, $.try_block, $.block, $.if_expression, $.match_expression, $.while_expression, $.loop_expression, $.for_expression, $.const_block),

    macro_invocation: ($) => seq(field("macro", choice($.scoped_identifier, $.identifier, $._reserved_identifier)), "!", alias($.delim_token_tree, $.token_tree)),

    scoped_identifier: ($) => seq(field("path", optional(choice($._path, $.bracketed_type, alias($.generic_type_with_turbofish, $.generic_type)))), "::", field("name", choice($.identifier, $.super))),

    scoped_type_identifier: ($) =>
      seq(field("path", optional(choice($._path, alias($.generic_type_with_turbofish, $.generic_type), $.bracketed_type, $.generic_type))), "::", field("name", $._type_identifier)),

    reference_expression: ($) => prec(PREC.unary, seq("&", choice(seq("raw", choice("const", $.mutable_specifier)), optional($.mutable_specifier)), field("value", $._expression))),

    binary_expression: ($) => {
      const table = [
        [PREC.and, "&&"],
        [PREC.or, "||"],
        [PREC.bitand, "&"],
        [PREC.bitor, "|"],
        [PREC.bitxor, "^"],
        [PREC.comparative, choice("==", "!=", "<", "<=", ">", ">=")],
        [PREC.shift, choice("<<", ">>")],
        [PREC.additive, choice("+", "-")],
        [PREC.multiplicative, choice("*", "/", "%")],
      ];

      // @ts-ignore
      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              // @ts-ignore
              field("operator", operator),
              field("right", $._expression),
            ),
          ),
        ),
      );
    },

    call_expression: ($) => prec(PREC.call, seq(field("function", $._expression_except_range), field("arguments", $.arguments))),

    arguments: ($) => seq("(", sepBy(",", seq(repeat($.attribute_item), $._expression)), optional(","), ")"),

    tuple_expression: ($) => seq("(", repeat($.attribute_item), seq($._expression, ","), repeat(seq($._expression, ",")), optional($._expression), ")"),

    unit_expression: (_) => seq("(", ")"),

    if_expression: ($) => prec.right(seq("if", field("condition", $._condition), field("consequence", $.block), optional(field("alternative", $.else_clause)))),

    let_condition: ($) => seq("let", field("pattern", $._pattern), "=", field("value", prec.left(PREC.and, $._expression))),

    _condition: ($) => choice($._expression, $.let_condition, alias($._let_chain, $.let_chain)),

    match_expression: ($) => seq("match", field("value", $._expression), field("body", $.match_block)),

    match_block: ($) => seq("{", optional(seq(repeat($.match_arm), alias($.last_match_arm, $.match_arm))), "}"),

    match_arm: ($) =>
      prec.right(
        seq(
          repeat(choice($.attribute_item, $.inner_attribute_item)),
          field("pattern", $.match_pattern),
          "=>",
          choice(seq(field("value", $._expression), ","), field("value", prec(1, $._expression_ending_with_block))),
        ),
      ),

    match_pattern: ($) =>
      seq(
        $._pattern,
        optional(seq("if", field("condition", $._expression))), // Guard[cite: 1]
      ),

    while_expression: ($) => seq(optional(seq($.label, ":")), "while", field("condition", $._condition), field("body", $.block)),

    for_expression: ($) => seq(optional(seq($.label, ":")), "for", field("pattern", $._pattern), "in", field("value", $._expression), field("body", $.block)),

    const_block: ($) => seq("const", field("body", $.block)),

    closure_expression: ($) =>
      prec(
        PREC.closure,
        seq(
          optional("static"),
          optional("async"),
          optional("move"),
          field("parameters", $.closure_parameters),
          choice(seq(optional(seq("->", field("return_type", $._type))), field("body", $.block)), field("body", choice($._expression, "_"))),
        ),
      ),

    closure_parameters: ($) => seq("|", sepBy(",", choice($._pattern, $.parameter)), "|"),

    field_expression: ($) => prec(PREC.field, seq(field("value", $._expression), ".", field("field", choice($._field_identifier, $.integer_literal)))),

    block: ($) => seq(optional(seq($.label, ":")), "{", repeat($._statement), optional($._expression), "}"),

    // Section - Patterns

    _pattern: ($) =>
      choice(
        $._literal_pattern,
        alias(choice(...primitiveTypes), $.identifier),
        $.identifier,
        $.scoped_identifier,
        $.generic_pattern,
        $.tuple_pattern,
        $.tuple_struct_pattern,
        $.struct_pattern,
        $._reserved_identifier,
        $.ref_pattern,
        $.slice_pattern,
        $.captured_pattern,
        $.reference_pattern,
        $.remaining_field_pattern,
        $.mut_pattern,
        $.range_pattern,
        $.or_pattern,
        $.const_block,
        $.macro_invocation,
        "_",
      ),

    tuple_pattern: ($) => seq("(", sepBy(",", choice($._pattern, $.closure_expression)), optional(","), ")"),

    tuple_struct_pattern: ($) => seq(field("type", choice($.identifier, $.scoped_identifier, alias($.generic_type_with_turbofish, $.generic_type))), "(", sepBy(",", $._pattern), optional(","), ")"),

    struct_pattern: ($) => seq(field("type", choice($._type_identifier, $.scoped_type_identifier)), "{", sepBy(",", choice($.field_pattern, $.remaining_field_pattern)), optional(","), "}"),

    field_pattern: ($) =>
      seq(
        optional("ref"),
        optional($.mutable_specifier),
        choice(field("name", alias($.identifier, $.shorthand_field_identifier)), seq(field("name", $._field_identifier), ":", field("pattern", $._pattern))),
      ),

    // Ensure spread is allowed in array/struct patterns
    remaining_field_pattern: (_) => "...", // Changed from .. to ...[cite: 2]

    mut_pattern: ($) => prec(-1, seq($.mutable_specifier, $._pattern)),

    range_pattern: ($) =>
      choice(
        seq(field("left", choice($._literal_pattern, $._path)), choice(seq(choice("...", "..=", ".."), field("right", choice($._literal_pattern, $._path))), "..")),
        seq(choice("..=", ".."), field("right", choice($._literal_pattern, $._path))),
      ),

    ref_pattern: ($) => seq("ref", $._pattern),

    captured_pattern: ($) => seq($.identifier, "@", $._pattern),

    or_pattern: ($) => prec.left(-2, choice(seq($._pattern, "|", $._pattern), seq("|", $._pattern))),

    // Section - Literals

    _literal: ($) => choice($.string_literal, $.raw_string_literal, $.char_literal, $.boolean_literal, $.integer_literal, $.float_literal),

    _literal_pattern: ($) => choice($.string_literal, $.raw_string_literal, $.char_literal, $.boolean_literal, $.integer_literal, $.float_literal, $.negative_literal),

    integer_literal: (_) => token(seq(choice(/[0-9][0-9_]*/, /0x[0-9a-fA-F_]+/, /0b[01_]+/, /0o[0-7_]+/), optional(choice(...numericTypes)))),

    string_literal: ($) => seq(alias(/[bc]?"/, '"'), repeat(choice($.escape_sequence, $.string_content)), alias($.string_close, '"')),

    boolean_literal: (_) => choice("true", "false"),

    _path: ($) => choice($.self, alias(choice(...primitiveTypes), $.identifier), $.metavariable, $.super, $.crate, $.identifier, $.scoped_identifier, $._reserved_identifier),

    identifier: (_) => /(r#)?[_\p{XID_Start}][_\p{XID_Continue}]*/,

    _reserved_identifier: ($) => alias(choice("default", "union", "gen", "raw"), $.identifier),

    _type_identifier: ($) => alias($.identifier, $.type_identifier),
    _field_identifier: ($) => alias($.identifier, $.field_identifier),
